# llvm-project-20170507

./: .clang-format  .clang-tidy  .gitignore
clang/include/clang/Basic/: Attr.td  AttrDocs.td  Features.def  LangOptions.def  LangOptions.h  SyringeLists.h
clang/include/clang/Driver/: Options.td  SyringeArgs.h  ToolChain.h
clang/include/clang/Frontend/: CodeGenOptions.def
clang/include/clang/Sema/: Sema.h
clang/lib/Basic/: SyringeLists.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGCall.cpp  CMakeLists.txt  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h
clang/lib/Driver/: CMakeLists.txt  SyringeArgs.cpp  ToolChain.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  CommonArgs.h  Darwin.cpp  Darwin.h  FreeBSD.cpp  Gnu.cpp  NetBSD.cpp  OpenBSD.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Sema/: Sema.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaTemplateInstantiateDecl.cpp
clang/test/CodeGen/: syringe-imbue.cpp  syringe-injection-site.cpp  syringe-inline-function.cpp
clang/test/Sema/: syringe-injection-site-attr.c  syringe-injection-site-attr.cpp  syringe-payload-attr.c  syringe-payload-attr.cpp
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: builtin-config-ix.cmake  config-ix.cmake
compiler-rt/include/: CMakeLists.txt
compiler-rt/include/syringe/: injection_data.h  syringe_rt.h  syringe_rt_cxx.h
compiler-rt/lib/: CMakeLists.txt
compiler-rt/lib/syringe/: CMakeLists.txt  syringe_rt.cpp
compiler-rt/lib/syringe/tests/: CMakeLists.txt
compiler-rt/lib/syringe/tests/unit/: CMakeLists.txt  syringe_registration_test.cc  syringe_unit_test_main.cc
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h  SyringeRecord.h  YAMLSyringeRecord.h
llvm/include/llvm-c/: Initialization.h
llvm/include/llvm/Bitcode/: LLVMBitCodes.h
llvm/include/llvm/IR/: Attributes.td
llvm/include/llvm/Transforms/: Syringe.h
llvm/lib/: CMakeLists.txt
llvm/lib/AsmParser/: LLLexer.cpp  LLParser.cpp  LLToken.h
llvm/lib/Bitcode/Reader/: BitcodeReader.cpp
llvm/lib/Bitcode/Writer/: BitcodeWriter.cpp
llvm/lib/ExecutionEngine/Orc/: IndirectionUtils.cpp
llvm/lib/IR/: Attributes.cpp  Instructions.cpp  Verifier.cpp
llvm/lib/Passes/: LLVMBuild.txt  PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/: CMakeLists.txt  LLVMBuild.txt
llvm/lib/Transforms/Instrumentation/: Instrumentation.cpp  Syringe.cpp
llvm/lib/Transforms/Syringe/: CMakeLists.txt  LLVMBuild.txt  Syringe.cpp
llvm/lib/Transforms/Utils/: CodeExtractor.cpp
llvm/tools/opt/: CMakeLists.txt  LLVMBuild.txt  opt.cpp
syringe-test/: .gitignore  injection_decl.cpp  main.cpp  makefile  syringe.cpp  syringe.hpp  template.hpp  util.hpp
syringe-test/config/: injection_decl.cpp  main.cpp  makefile  syringe.cpp  syringe.hpp  syringe.yml
syringe-test/plain_c/: injection_decl.c  main.c  makefile  syringe.c  syringe.yml
